clean up dd2